# JNI_NIO_Buffer_vs_JArray

./: .gitignore  README.md  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
java/: build.gradle  settings.gradle
java/src/main/java/: Main.java
java/src/test/java/: MainTest.java
linux/: CMakeLists.txt  build.gradle  settings.gradle
linux/src/: CMakeLists.txt  main.cpp
